Implement chat history feature in Gamani application
- Added a new ChatStore for managing chat messages, including fetching, saving, and clearing messages.
- Integrated chat history functionality into the DashboardPage, allowing users to view and manage chat history.
- Updated API endpoints for chat history: `GET`, `POST`, and `DELETE` for managing messages associated with projects.
- Enhanced UI to toggle chat history visibility and clear chat history with user confirmation.
- Updated localization files to include chat history strings in English and Hebrew.

These changes improve user experience by providing persistent chat history for projects, enhancing the overall functionality of the Gamani application.

--- a/apps/gamani/client/src/i18n/locales/en.json
+++ b/apps/gamani/client/src/i18n/locales/en.json
@@ -20,6 +20,16 @@
         "math": "Simple math quiz game",
         "snake": "Colorful snake and fruits game",
         "matching": "Memory matching game for kids"
+      },
+      "history": {
+        "title": "Chat History",
+        "noHistory": "No chat history yet",
+        "clearHistory": "Clear History",
+        "confirmClear": "Are you sure you want to clear chat history?",
+        "user": "You",
+        "assistant": "Gamani",
+        "loadingHistory": "Loading chat history...",
+        "savingMessage": "Saving message..."
       }
     },
     "preview": {
