--- a/apps/gamani/client/src/i18n/locales/he.json
+++ b/apps/gamani/client/src/i18n/locales/he.json
@@ -20,6 +20,16 @@
         "math": "משחק חידות מתמטיקה פשוט",
         "snake": "משחק נחש ופירות צבעוני",
         "matching": "משחק זיכרון התאמה לילדים"
+      },
+      "history": {
+        "title": "היסטוריית שיחה",
+        "noHistory": "אין היסטוריית שיחה עדיין",
+        "clearHistory": "נקה היסטוריה",
+        "confirmClear": "האם אתה בטוח שברצונך לנקות את היסטוריית השיחה?",
+        "user": "אתה",
+        "assistant": "גמני",
+        "loadingHistory": "טוען היסטוריית שיחה...",
+        "savingMessage": "שומר הודעה..."
       }
     },
     "preview": {
