Implement game sharing functionality in Gamani application
- Added API endpoints for sharing games: `POST /api/protected/games/share` to create shareable games and `GET /api/games/:shareId` for public access.
- Implemented frontend features including a share button in the DashboardPage and a new SharedGamePage for viewing shared games.
- Enhanced localization for sharing UI in English and Hebrew.
- Updated the database schema to support shared games and added functionality to increment access counts.
- Improved error handling and user feedback for sharing operations.

These changes enhance user engagement by allowing users to share their games easily, improving the overall functionality of the Gamani application.

--- a/apps/gamani/client/src/i18n/locales/en.json
+++ b/apps/gamani/client/src/i18n/locales/en.json
@@ -36,7 +36,12 @@
       "title": "Game Preview",
       "generating": "Generating your game...",
       "placeholder": "Your generated game will appear here",
-      "yourGame": "Your Game"
+      "yourGame": "Your Game",
+      "share": "Share",
+      "sharing": "Sharing...",
+      "shareSuccess": "Game shared successfully! Link copied to clipboard: {{url}}",
+      "shareFallback": "Game shared! Copy this link:",
+      "shareError": "Failed to share game. Please try again."
     }
   },
   "projects": {
