--- a/apps/gamani/client/src/i18n/locales/he.json
+++ b/apps/gamani/client/src/i18n/locales/he.json
@@ -36,7 +36,12 @@
       "title": "תצוגה מקדימה של המשחק",
       "generating": "יוצר את המשחק שלך...",
       "placeholder": "המשחק שנוצר יופיע כאן",
-      "yourGame": "המשחק שלך"
+      "yourGame": "המשחק שלך",
+      "share": "שתף",
+      "sharing": "משתף...",
+      "shareSuccess": "המשחק שותף בהצלחה! הקישור הועתק ללוח: {{url}}",
+      "shareFallback": "המשחק שותף! העתק את הקישור הזה:",
+      "shareError": "נכשל לשתף את המשחק. נסה שוב."
     }
   },
   "projects": {
